correction scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,7 +244,7 @@ header {
     width: 100%;
     height: 3px;
     position: fixed;
-    top: 65px;
+    top: 9.1vh;
     z-index: 10;
 }
 
